everything working, discord.py unfinished

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,15 @@ services:
     ports:
       - ${FASTAPI_PORT}:8000
 
-#  influxdb:
-#    image: influxdb:latest
-#    volumes:
-#      - influxdb-storage:/var/lib/influxdb2:rw
-#    ports:
-#      - ${DOCKER_INFLUXDB_INIT_PORT}:8086
-#    env_file:
-#      - .env
-#    entrypoint: ["./entrypoint.sh"]
+  influxdb:
+    image: influxdb:latest
+    volumes:
+      - influxdb-storage:/var/lib/influxdb2:rw
+    ports:
+      - ${DOCKER_INFLUXDB_INIT_PORT}:8086
+    env_file:
+      - .env
+    entrypoint: ["./entrypoint.sh"]
 
   grafana:
     image: grafana/grafana:latest
@@ -25,3 +25,4 @@ services:
 
 volumes:
   grafana-storage:
+  influxdb-storage:
